--- a/Sakiku/app/src/main/res/values/strings.xml
+++ b/Sakiku/app/src/main/res/values/strings.xml
@@ -9,22 +9,26 @@
     <string name="robot" translatable="false">&#xf085;</string>
     <string name="ninja" translatable="false">&#xf1e2;</string>
     <string name="configuracion" translatable="false">&#xf013;</string>
+    <string name="records" translatable="false">&#xf091;</string>
+    <string name="sonido_on" translatable="false">&#xf0f3;</string>
+    <string name="sonido_off" translatable="false">&#xf1f6;</string>
     <string name="si">Si</string>
     <string name="no">No</string>
     <string name="preguntaSalir">Salir del juego ?</string>
     <string name="creditosTitulo">Creditos</string>
-    <string name="creditosTexto">Los frames respectivos al robot los he sacado de gameart2d, la música de opengameart, las imagenes de pixbay y las fuentes tanto de fontlibrary como de
-        fontawesome todos ellos de libre distribucion. Ha alguna de estas imagenes les he añadido modificaciones propias.</string>
+    <string name="creditosTexto">Los frames respectivos a los personajes los he sacado de gameart2d, la música de opengameart, las imagenes tanto de pixbay como de gameart2d
+        y las fuentes tanto de fontlibrary como de fontawesome todos ellos de libre distribucion.</string>
     <string name="Final">Fin</string>
     <string name="vibrar">Vibracion</string>
     <string name="musica">Musica</string>
     <string name="efectos">Efectos</string>
-    <string name="sonido_on" translatable="false">&#xf0f3;</string>
-    <string name="sonido_off" translatable="false">&#xf1f6;</string>
-    <string name="ayuda">ayuda</string>
-    <string name="ayudaTexto">El objetivo de este juego es aguantar el maximo tiempo posible vivo, por lo que la muerte supone el fin del juego.
-    Moveras al robot con las señales de direccion situadas en la parte inferior izquierda de tu telefono, a su vez dispararas con la señal de disparo en la esquina inferior derecha.
-    Recuerda dejar que el robot realice la accion completa si no no podra preparar el disparo. Eso es todo a matar aliens !!!!</string>
+    <string name="ayuda">Ayuda</string>
+    <string name="ayudaTexto">Estas ante una carrera de 30 segundos, esquiva los obstaculos para evitar que tu puntuación baje. Salta y deslizate con las flechas
+        de la esquina inferior izquierda. Recuerda tener el servidor encendido antes de jugar y si es la primera vez que juegas puede que tarde un poco en conectarse.</string>
     <string name="eleccion">Elija el personaje</string>
     <string name="elegido">Actual = </string>
+    <string name="recordsTitulo">Records</string>
+    <string name="noserver">No se ha podido encontrar el servido vuelva a intentarlo</string>
+    <string name="conectando">Aun no estas conectado al servidor</string>
+    <string name="primeravez">Si es la primera vez esto puede tardar</string>
 </resources>
